# mfc-sdk

./: .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
mfc/: __init__.py
mfc/client/: cache.py  myflyclub.py
mfc/core/modules/: airports.py
tests/client/: test_cache.py  test_myflyclub.py
tests/core/modules/: test_airports.py
